# clipboard_updates

./: .env  .gitignore  README.md  cliptray_offline.db  latest.json  package-lock.json  package.json
clipboard_updates/: package.json  vite.config.js
clipboard_updates/src-tauri/: cliptray_offline.db
clipboard_updates/src-tauri/src/: auth.rs  command.rs  config.rs  google_oauth.rs  main.rs  session.rs
clipboard_updates/src-tauri/src/db/: sqlite_database.rs  users_repository.rs
clipboard_updates/src/components/: ProtectedRoute.jsx
clipboard_updates/src/context/: AuthContext.jsx
clipboard_updates/src/hooks/: useTagsDB.js
clipboard_updates/src/libs/: firebaseAuth-simple.js  firebaseAuth.js
clipboard_updates/src/pages/: Landing.jsx  Login.jsx  OAuthCallback.jsx  Testing.jsx
src/: App.jsx
src-tauri/: Cargo.toml  cliptray_offline.db  cliptray_offline2.db  firebase-adminsdk.json  tauri.conf.json
src-tauri/icons/: images.icns
src-tauri/migrations/: 003_create_tags.sql
src-tauri/src/: auth.rs  command.rs  config.rs  latest.json  main.rs  session.rs  updater.rs
src-tauri/src/commands/: clipboard.rs  editor.rs  mod.rs
src-tauri/src/db/: database.rs  mod.rs  payments_repository.rs  sqlite_database.rs  sqlite_tags_repository.rs  sqlite_users_repository.rs  tags_repository.rs  users_repository.rs
src-tauri/src/db/schemas/: clipboard.rs  mod.rs  payments.rs  tags.rs  users.rs
src/components/: ProtectedRoute.jsx
src/components/common/: Pricing.jsx  header.jsx
src/components/home/: ContextMenu.jsx  CreateTagModal.jsx  SkeletonLoader.jsx  TagDropdown.jsx  Tags.jsx  content.jsx
src/components/settings/: General.jsx  Tags.jsx
src/context/: AuthContext.jsx
src/hooks/: useAutoPurge.js  useAutoUpdate.js  useBootstrap.js  useClipboardDB.js  usePayment.js  useSyncToCloud.js  useTagsDB.js  useUserPlan.js
src/libs/: firebaseAuth-redirect.js  firebaseAuth.js  firebaseConfig.js
src/libs/tauri/: commands.js
src/mock/: data.js
src/pages/: Landing.jsx  Login.jsx  Settings.jsx  Signup.jsx
