[package]
name = "cliptray"
version = "0.2.5"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[package.metadata.tauri.bundle]
windows = { console = false }  


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cliptray_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tiny_http = "0.12"
url = "2.5"
base64 = "0.22"
sha2 = "0.10"

lazy_static = "1.4"
once_cell = "1.19.0"
jsonwebtoken = "9"  
dirs = "5.0" 
include_dir = "0.7"
tauri-plugin-autostart = "2.5.1"
rs-firebase-admin-sdk = { version = "2.4.0", default-features = false, features = ["rustls-tls"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2.0.0"
semver = "1.0"
winreg = "0.52"
tauri-utils = "2"
futures-util = "0.3"
rand = "0.8" 
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
arboard = "3.3"
tempfile = "3.3"
tokio = { version = "1.0", features = ["full"] }
# Database
sqlx = { version = "0.7", features = ["sqlite", "postgres", "runtime-tokio", "macros", "chrono", "runtime-tokio-rustls"] }
dotenv = "0.15"
md5 = "0.7.0"
chrono = { version = "0.4", features = ["serde"] }  
log = "0.4"
directories = "5.0.0"
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",] }
tauri-plugin-store = "2.4.1"

